bootsetup (1.0-1)

  * Made Debian package lintian clean.

 -- Martin Dagarin <martin.dagarin@gmail.com>  2019-07-31